--- a/sites/all/themes/slac/sass/_layout.sass
+++ b/sites/all/themes/slac/sass/_layout.sass
@@ -1112,12 +1112,17 @@ ul.tabs, .action-links,
     .pane-page-content &
       .front &
         margin-bottom: 36px
-      .front .page-basic-io &
-        margin-bottom: 23px
-  .inner_right &
-    .pane-page-content &
-      .front .page-basic-io &
-        margin-bottom: 8px
+
+.front .page-basic-io
+  .general-left
+    .panels-ipe-portlet-wrapper,
+    .panel-pane
+      margin-bottom: 23px
+  .inner_right
+    .panels-ipe-portlet-wrapper,
+    .pane-fieldable-panels-pane
+      margin-bottom: 8px
+
 
 //Main heading style
 h2
